# Estrutura_de_Dados

./: .gitignore  CMakeLists.txt  README.md  arvore_patricia.c  exercicio_proposto.c
Estudos/: arvore_binaria.c  estudo_dirigido.c  fila.c  fila_estrutura_fila.c  lista_circular.c  lista_duplamente_encadeada.c  lista_duplamente_encadeada_estrutura_lista.c  lista_simplesmente_encadeada.c  lista_simplesmente_encadeada_estrutura_lista.c  pilha.c  pilha_estrutura_pilha.c  resolucao_prova_ant.c
atividade1/: questao1.c  questao2.c  questao3.c
atividade2/: questaoe2.c
testando_busca_e_ordenacao/: insertionPosition.c  pesquisaBinaria.c  removePosition.c
